swiper fixed and also on mobile screen

--- a/init/css/style.css
+++ b/init/css/style.css
@@ -359,6 +359,11 @@ flex-direction: row;
 
     /* SWIPER */
 
+    .swiper {
+      width: 60%;
+     
+    }
+
   .swiper-slide {
     font-size: 12px;
 
